--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -1,7 +1,6 @@
 <div class="container--fluid priorities-form">
-  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
-    <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
-</ngx-spinner>  <div class="sub-head">
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-clip-rotate" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+  <div class="sub-head">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xs-12 col-md-10 ">
@@ -15,13 +14,14 @@
     <div class="row justify-content-center " style="background-color: #F7F7F7;">
       <div class="col-xs-12 col-md-10 main-content">
         <div class="row">
+          
           <div class="col-xs-12 col-xl-8 priorites-list">
             <div class="col holder mt-3">
               <div class="row justify-content-center">
                 <div class="row head-section">
                   <p class="title-head col-6 float-start">{{'sell.Go to the best buyer' | translate}}</p>
                   <p class=" title-head col-6">
-                    <span class="float-end">{{'sell.Step' | translate}} {{currentStep}} /4</span>
+                    <span class="float-end">{{'sell.Step' | translate}} 1/4</span>
                   </p>
                   <div class="progress-bars col-12">
                     <div class="row">
@@ -70,22 +70,24 @@
                 </div>
               </div>
               <ng-stepper #cdkStepper [linear]="false">
-
-                <cdk-step  [optional]="false">
+                <cdk-step [stepControl]="stepOne.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
-                  <sell-form-template ></sell-form-template>
+                  <sell-form-template #stepOne></sell-form-template>
                 </cdk-step>
+
                 <cdk-step [stepControl]="stepTwo.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
                   <sell-form-template #stepTwo></sell-form-template>
                 </cdk-step>
+
                 <cdk-step [stepControl]="stepThree.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
                   <sell-form-template #stepThree></sell-form-template>
                 </cdk-step>
+
                 <cdk-step [stepControl]="stepFour.stepForm" [optional]="false">
                   <ng-template cdkStepLabel>
                   </ng-template>
@@ -94,7 +96,9 @@
               </ng-stepper>
             </div>
           </div>
+          
           <div class="col-xs-12 col-xl-4 priorites-control d-none d-xl-block">
+
             <div class="col mt-3">
               <ngb-accordion #myaccordion="ngbAccordion" (panelChange)="beforeChange($event)" [closeOthers]="true"
                 activeIds="{{activeIds}}">
@@ -233,6 +237,7 @@
             </div>
 
           </div>
+          
           <div class="row d-block d-xl-none" style="min-height: 90px;">
             <div class="col-6"></div>
             <div class="button col-sm-6 col-xs-12 float-end">
