--- a/src/app/components/seller/unit-details/unit-details.component.html
+++ b/src/app/components/seller/unit-details/unit-details.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluied property-details">
-    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="rgba(0, 0, 0, 0.0)"   [fullScreen]="true">
-        <img class="spinner-img" style='animation:flip-with-scale 3s infinite;position: relative;top:-100px;' src='../../assets/images/logo-loader.png'/>
+    <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+        <p style="color: white"> Loading... </p>
     </ngx-spinner>
 
     <div class="row justify-content-center" style="margin: 0;">
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <p class="price">
-                            {{'propertyDetails.EGP' | translate}} {{numberWithCommas(getPrice())}} 
+                            {{numberWithCommas(getPrice())}} {{'propertyDetails.EGP' | translate}}
                         </p>
                         <div class="row justify-content-center" style="padding: 10px;">
                             <span class="location" style="color: #ABABB6;">
