--- a/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.html
+++ b/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.html
@@ -4,26 +4,41 @@
         [ngTemplateOutlet]="template"
         [ngTemplateOutletContext]="{item}">
     </ng-container>
+</div>
+
+<ng-template #template let-item="item">
+    <div class="row mt-3">
+
+        <div class="col-xs-12 col-lg-6" [class.order-lg-1]="item.order === 1">
+
+                <img src="{{item.imageSrc}}" style="max-width: 70%;display: inherit;margin: 0 auto;" alt="..."/>
+           
+        </div>
+
+        <div class="col-xs-12 col-lg-6 body-container">
+
+                <div *ngFor="let el of item.description" class="text-col" [class.multi]="item.description.length > 1">
+                        <!-- <span style="width: 40px;">{{el.id}}</span> -->
+                    <h4 class="main-title">{{lang === 'en' ? el.head_en : el.head_ar}}</h4>
+                    
+                    <div style="height: 20px"> </div>
+                    
+                    <div *ngFor="let item of getDescription(el)" >
+                        <!-- <span style="width:10px">- </span> -->
+                        <p style="line-height: 1;display: -webkit-inline-box;"> -  {{item}} </p>
+                        
+                    </div>
+                </div>
+
+
+            
+        </div>
+
+
     </div>
 
-    <ng-template #template let-item="item">
-        <div class="row mt-3">
-            <div class="col-xs-12 col-lg-6" [class.order-lg-1]="item.order === 1">
-                <img src="{{item.imageSrc}}" style="max-width: 100%;display: inherit;margin: 0 auto;" alt="..."/>
-            </div>
-            <div class="col-xs-12 col-lg-6">
-                <div *ngFor="let el of item.description" class="text-col" [class.multi]="item.description.length > 1">
-                    <h4>
-                        <span style="width: 40px;">{{el.id}}</span>
-                        <h4 class="main-title">{{lang === 'en' ? el.head_en : el.head_ar}}</h4>
-                    </h4>
-                    <p *ngFor="let item of getDescription(el)" style="line-height: 1;display: flex;">
-                        <span style="width:10px">- </span>{{item}}
-                    </p>
-                </div>
-                
-            </div>
-        </div>
-        
-    </ng-template>
+    <div *ngIf="item.description[0].id !== 3" style="width: 30%; height: 0.5px; background: rgb(120, 115, 115); margin: 2% 0 2% 0;" > </div> 
+    
+    
+</ng-template>
     
